# GeometryLib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  plan.md
.github/workflows/: docs.yml
cmake/: GeometryLibConfig.cmake.in  GeometrySources.cmake  GeometryTestSources.cmake
include/Geometry/: tolerance.hpp
include/Geometry/Bounds/: bounding_box.hpp
include/Geometry/Primitives/: line.hpp  plane.hpp  point.hpp  ray.hpp  vector.hpp
include/Geometry/Queries/: distance.hpp  intersect.hpp  parallel.hpp  project.hpp
include/Geometry/Settings/: tolerance.hpp
include/Geometry/Shapes/: circle.hpp  segment.hpp  triangle.hpp
src/Bounds/: bounding_box.cpp
src/Primitives/: line.cpp  plane.cpp  point.cpp  ray.cpp  vector.cpp
src/Queries/: distance.cpp  intersect.cpp  parallel.cpp  project.cpp
src/Shapes/: circle.cpp  segment.cpp  triangle.cpp
src/utils/: assert_utils.hpp  numerical_utils.cpp  numerical_utils.hpp
tests/Bounds/: test_bounding_box.cpp
tests/Primitives/: test_line.cpp  test_plane.cpp  test_point.cpp  test_ray.cpp  test_vector.cpp
tests/Queries/: test_distance.cpp  test_intersect.cpp  test_parallel.cpp  test_project.cpp
tests/Shapes/: test_circle.cpp  test_segment.cpp  test_triangle.cpp
